# angular_proj_statistic

./: .gitignore  Cargo.toml  README.md  main
src/: dir_stat.rs  errors.rs  file_finder.rs  file_reader.rs  file_reader_test.rs  lib.rs  main.rs  wallker.rs
src/cli/: args.rs  mod.rs
