[package]
name = "ng_stat"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
rust-version = "1.72.1"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
cli-log = "2.0.0"
regex = "1.9.6"
thiserror = "1.0.49"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
